tests/rune_literal_invalid_utf8_bad.stderr
tests/rune_literal_invalid_utf8_bad.hop:2:12: error: HOP1018: rune literal must decode to valid UTF-8
