tests/rune_literal_invalid_utf8_bad.hop
// Verifies rune literal invalid UTF-8 is rejected.
const x = '\xA9'
